--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="operation_canceled_by_user">Operation canceled by user</string>
     <string name="auth_failed">Authentication failed</string>
     <string name="request_aborted_by_user">Request aborted by user</string>
+    <string name="auth_by">Auth By</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
+    <string name="support">Support</string>
 </resources>
